--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- Add your site or application content here -->
   <p>Hello, welcome to RobGit, the site build by gits, for other gits! Enjoy :D</p>
+  <p>What's you're favourite humming noise?</p>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
