--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <p>Hello, welcome to RobGit, the site build by gits, for other gits! Enjoy :D</p>
   <p>What's you're favourite humming noise?</p>
   <p>Scrambled eggs, scrambled brain? Heard it here first, yolks! (um, folks)</p>
+  <p>Anyone remember Topics, the choc-o-late bar from the 90s? Well it turns out they're stil around. Are they nice? Meh. They were ok. Are they still? Don't know.</p>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
